5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1708_3035.log
== SUBMITION (2019-04-29 14:48:36) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x==180):
	print(sin(x))
elif(90 <= x) and (x <180) or (x==270):
	print(cos(x))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.217381
-- ERROR:
  File "/home/codebench/codes/1708/3035/main.py", line 1
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:48:37) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x==180):
	print(sin(x))
elif(90 <= x) and (x <180) or (x==270):
	print(cos(x))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.122859
-- ERROR:
  File "/home/codebench/codes/1708/3035/main.py", line 1
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:48:37) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x==180):
	print(sin(x))
elif(90 <= x) and (x <180) or (x==270):
	print(cos(x))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:48:39) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x==180):
	print(sin(x))
elif(90 <= x) and (x <180) or (x==270):
	print(cos(x))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:48:39) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x==180):
	print(sin(x))
elif(90 <= x) and (x <180) or (x==270):
	print(cos(x))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.160736
-- ERROR:
  File "/home/codebench/codes/1708/3035/main.py", line 1
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:48:54) 
-- CODE:

from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x==180):
	print(sin(x))
elif(90 <= x) and (x <180) or (x==270):
	print(cos(x))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 2
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:49:22) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(sin(x))
elif(90 <= x) and (x < 180) or (x == 270):
	print(cos(x))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:49:32) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(sin(x))
elif(90 <= x) and (x < 180) or (x == 270):
	print(cos(x))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:49:34) 
-- CODE:
from math import
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(sin(x))
elif(90 <= x) and (x < 180) or (x == 270):
	print(cos(x))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:50:19) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(sin(x))
elif(90 <= x) and (x < 180) or (x == 270):
	print(cos(x))
else:
	print("entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = radians(input())
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:52:06) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(round(sin(x), 4)
elif(90 <= x) and (x < 180) or (x == 270):
	print(round(cos(x), 4)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:53:47) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(round(sin(x), 2)
elif(90 <= x) and (x < 180) or (x == 270):
	print(round(cos(x), 2)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:00) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(round(sin(x), 2)
elif(90 <= x) and (x < 180) or (x == 270):
	print(round(cos(x), 2)
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.185093
-- ERROR:
  File "/home/codebench/codes/1708/3035/main.py", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:00) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(round(sin(x), 2)
elif(90 <= x) and (x < 180) or (x == 270):
	print(round(cos(x), 2)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:04) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(round(sin(x), 2)
elif(90 <= x) and (x < 180) or (x == 270):
	print(round(cos(x), 2)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:05) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(round(sin(x), 2)
elif(90 <= x) and (x < 180) or (x == 270):
	print(round(cos(x), 2)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:25:47) 
-- CODE:
from math import*
x = radians(input("Valor de x: "))

if(0 <= x) and (x < 90) or (x == 180):
	print(round(sin(x), 4)
elif(90 <= x) and (x < 180) or (x == 270):
	print(round(cos(x), 4)
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(90 <= x) and (x < 180) or (x == 270):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
